// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> should render the navbar 1`] = `
<div
  class="nav-primary hidden-panel"
>
  <div
    class="nav-dropdown dropdown"
    data-candu-id="navbar-dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-transparent"
      type="button"
    >
      <div>
        
        <i
          class="material-icons icon-more"
        >
          more_vert
        </i>
      </div>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/tickets"
      >
        <i
          class="material-icons mr-2 icon"
        >
          question_answer
        </i>
        Tickets
      </a>
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/customers"
      >
        <i
          class="material-icons mr-2 icon"
        >
          people
        </i>
        Customers
      </a>
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/stats"
      >
        <i
          class="material-icons mr-2 icon"
        >
          bar_chart
        </i>
        Statistics
      </a>
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/settings"
      >
        <i
          class="material-icons mr-2 icon"
        >
          settings
        </i>
        Settings
      </a>
    </div>
  </div>
  <div
    class="navbar-content"
  />
  <div
    class="nav-dropdown dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle dropdown-toggle-dropup btn btn-transparent"
      type="button"
    >
      <div>
        <span
          class="body-semibold"
        >
          Alex Plugaru
          <div
            class="component"
            style="width: 36px; height: 36px; position: absolute; bottom: 12px; right: 18px;"
          >
            <div
              class="initials"
              style="width: 36px; height: 36px; font-size: 15px;"
            >
              <span
                style="line-height: 38px;"
              >
                AP
              </span>
            </div>
            <div
              class="badge"
              style="background-color: rgb(36, 214, 157);"
            />
          </div>
        </span>
      </div>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <a
        class="dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <div>
            Available
          </div>
          <div>
            <div>
              <label
                aria-checked="true"
                class="container"
                for="toggle-button-42"
                role="switch"
              >
                <input
                  checked=""
                  class="input"
                  disabled=""
                  id="toggle-button-42"
                  name="toggle-button-42"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
              </label>
            </div>
          </div>
        </div>
      </a>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/settings/profile"
      >
        <i
          class="material-icons mr-2 icon"
        >
          person
        </i>
        Your profile
      </a>
      <a
        class="dropdown-item dropdown-item"
        href="https://docs.gorgias.com/"
        role="menuitem"
        tabindex="0"
        target="_blank"
      >
        <i
          class="material-icons mr-2 icon"
          title="Help Center"
        >
          help
        </i>
        Help Center
      </a>
      <a
        class="dropdown-item dropdown-item"
        href="https://status.gorgias.com/"
        role="menuitem"
        tabindex="0"
        target="_blank"
      >
        <i
          class="material-icons mr-2 icon"
          title="Service status"
        >
          query_stats
        </i>
        Service status
      </a>
      <a
        class="dropdown-item dropdown-item"
        href="https://portal.productboard.com/gorgias/1-gorgias-product-roadmap/tabs/3-planned/"
        role="menuitem"
        tabindex="0"
        target="_blank"
      >
        <i
          class="material-icons mr-2 icon"
        >
          map
        </i>
        Roadmap
      </a>
      <div
        class="dropdown-item dropdown-item"
        id="noticeable-widget"
        role="menuitem"
        tabindex="0"
      >
        <i
          class="material-icons mr-2 icon"
        >
          new_releases
        </i>
        Latest updates
        <span
          id="noticeable-widget-notification"
        />
      </div>
      <button
        class="dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <i
          class="material-icons mr-2 icon"
        >
          keyboard
        </i>
        Keyboard shortcuts
      </button>
      <a
        class="dropdown-item dropdown-item"
        href="/logout?csrf-token=abcd"
        role="menuitem"
        tabindex="0"
      >
        <i
          class="material-icons mr-2 icon"
        >
          exit_to_app
        </i>
        Log out
      </a>
    </div>
  </div>
</div>
`;

exports[`<Navbar /> should render the opened panel 1`] = `
<div
  class="nav-primary"
>
  <div
    class="nav-dropdown dropdown"
    data-candu-id="navbar-dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-transparent"
      type="button"
    >
      <div>
        
        <i
          class="material-icons icon-more"
        >
          more_vert
        </i>
      </div>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/tickets"
      >
        <i
          class="material-icons mr-2 icon"
        >
          question_answer
        </i>
        Tickets
      </a>
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/customers"
      >
        <i
          class="material-icons mr-2 icon"
        >
          people
        </i>
        Customers
      </a>
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/stats"
      >
        <i
          class="material-icons mr-2 icon"
        >
          bar_chart
        </i>
        Statistics
      </a>
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/settings"
      >
        <i
          class="material-icons mr-2 icon"
        >
          settings
        </i>
        Settings
      </a>
    </div>
  </div>
  <div
    class="navbar-content"
  />
  <div
    class="nav-dropdown dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle dropdown-toggle-dropup btn btn-transparent"
      type="button"
    >
      <div>
        <span
          class="body-semibold"
        >
          Alex Plugaru
          <div
            class="component"
            style="width: 36px; height: 36px; position: absolute; bottom: 12px; right: 18px;"
          >
            <div
              class="initials"
              style="width: 36px; height: 36px; font-size: 15px;"
            >
              <span
                style="line-height: 38px;"
              >
                AP
              </span>
            </div>
            <div
              class="badge"
              style="background-color: rgb(36, 214, 157);"
            />
          </div>
        </span>
      </div>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <a
        class="dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <div>
            Available
          </div>
          <div>
            <div>
              <label
                aria-checked="true"
                class="container"
                for="toggle-button-42"
                role="switch"
              >
                <input
                  checked=""
                  class="input"
                  disabled=""
                  id="toggle-button-42"
                  name="toggle-button-42"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
              </label>
            </div>
          </div>
        </div>
      </a>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/settings/profile"
      >
        <i
          class="material-icons mr-2 icon"
        >
          person
        </i>
        Your profile
      </a>
      <a
        class="dropdown-item dropdown-item"
        href="https://docs.gorgias.com/"
        role="menuitem"
        tabindex="0"
        target="_blank"
      >
        <i
          class="material-icons mr-2 icon"
          title="Help Center"
        >
          help
        </i>
        Help Center
      </a>
      <a
        class="dropdown-item dropdown-item"
        href="https://status.gorgias.com/"
        role="menuitem"
        tabindex="0"
        target="_blank"
      >
        <i
          class="material-icons mr-2 icon"
          title="Service status"
        >
          query_stats
        </i>
        Service status
      </a>
      <a
        class="dropdown-item dropdown-item"
        href="https://portal.productboard.com/gorgias/1-gorgias-product-roadmap/tabs/3-planned/"
        role="menuitem"
        tabindex="0"
        target="_blank"
      >
        <i
          class="material-icons mr-2 icon"
        >
          map
        </i>
        Roadmap
      </a>
      <div
        class="dropdown-item dropdown-item"
        id="noticeable-widget"
        role="menuitem"
        tabindex="0"
      >
        <i
          class="material-icons mr-2 icon"
        >
          new_releases
        </i>
        Latest updates
        <span
          id="noticeable-widget-notification"
        />
      </div>
      <button
        class="dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <i
          class="material-icons mr-2 icon"
        >
          keyboard
        </i>
        Keyboard shortcuts
      </button>
      <a
        class="dropdown-item dropdown-item"
        href="/logout?csrf-token=abcd"
        role="menuitem"
        tabindex="0"
      >
        <i
          class="material-icons mr-2 icon"
        >
          exit_to_app
        </i>
        Log out
      </a>
    </div>
  </div>
</div>
`;

exports[`<Navbar /> should render the user as unavailable 1`] = `
<div
  class="nav-primary hidden-panel"
>
  <div
    class="nav-dropdown dropdown"
    data-candu-id="navbar-dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-transparent"
      type="button"
    >
      <div>
        
        <i
          class="material-icons icon-more"
        >
          more_vert
        </i>
      </div>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/tickets"
      >
        <i
          class="material-icons mr-2 icon"
        >
          question_answer
        </i>
        Tickets
      </a>
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/customers"
      >
        <i
          class="material-icons mr-2 icon"
        >
          people
        </i>
        Customers
      </a>
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/stats"
      >
        <i
          class="material-icons mr-2 icon"
        >
          bar_chart
        </i>
        Statistics
      </a>
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/settings"
      >
        <i
          class="material-icons mr-2 icon"
        >
          settings
        </i>
        Settings
      </a>
    </div>
  </div>
  <div
    class="navbar-content"
  />
  <div
    class="nav-dropdown dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle dropdown-toggle-dropup btn btn-transparent"
      type="button"
    >
      <div>
        <span
          class="body-semibold"
        >
          Alex Plugaru
          <div
            class="component"
            style="width: 36px; height: 36px; position: absolute; bottom: 12px; right: 18px;"
          >
            <div
              class="initials"
              style="width: 36px; height: 36px; font-size: 15px;"
            >
              <span
                style="line-height: 38px;"
              >
                AP
              </span>
            </div>
            <div
              class="badge"
              style="background-color: rgb(255, 150, 0);"
            />
          </div>
        </span>
      </div>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <a
        class="dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <div>
            Available
          </div>
          <div>
            <div>
              <label
                aria-checked="false"
                class="container"
                for="toggle-button-42"
                role="switch"
              >
                <input
                  class="input"
                  disabled=""
                  id="toggle-button-42"
                  name="toggle-button-42"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
              </label>
            </div>
          </div>
        </div>
      </a>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <a
        class="dropdown-item dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        to="/app/settings/profile"
      >
        <i
          class="material-icons mr-2 icon"
        >
          person
        </i>
        Your profile
      </a>
      <a
        class="dropdown-item dropdown-item"
        href="https://docs.gorgias.com/"
        role="menuitem"
        tabindex="0"
        target="_blank"
      >
        <i
          class="material-icons mr-2 icon"
          title="Help Center"
        >
          help
        </i>
        Help Center
      </a>
      <a
        class="dropdown-item dropdown-item"
        href="https://status.gorgias.com/"
        role="menuitem"
        tabindex="0"
        target="_blank"
      >
        <i
          class="material-icons mr-2 icon"
          title="Service status"
        >
          query_stats
        </i>
        Service status
      </a>
      <a
        class="dropdown-item dropdown-item"
        href="https://portal.productboard.com/gorgias/1-gorgias-product-roadmap/tabs/3-planned/"
        role="menuitem"
        tabindex="0"
        target="_blank"
      >
        <i
          class="material-icons mr-2 icon"
        >
          map
        </i>
        Roadmap
      </a>
      <div
        class="dropdown-item dropdown-item"
        id="noticeable-widget"
        role="menuitem"
        tabindex="0"
      >
        <i
          class="material-icons mr-2 icon"
        >
          new_releases
        </i>
        Latest updates
        <span
          id="noticeable-widget-notification"
        />
      </div>
      <button
        class="dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <i
          class="material-icons mr-2 icon"
        >
          keyboard
        </i>
        Keyboard shortcuts
      </button>
      <a
        class="dropdown-item dropdown-item"
        href="/logout?csrf-token=abcd"
        role="menuitem"
        tabindex="0"
      >
        <i
          class="material-icons mr-2 icon"
        >
          exit_to_app
        </i>
        Log out
      </a>
    </div>
  </div>
</div>
`;
